[gd_scene load_steps=39 format=2]

[ext_resource path="res://Scenes/Shop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Airborne.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/Coin/0008.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Coin/0024.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Carrot/CarrotIcon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Potato/PotatoIcon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Farm.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Coin/0015.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Coin/0009.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Coin/0012.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Coin/0007.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Coin/0019.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Coin/0026.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Coin/0016.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Coin/0011.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Coin/0010.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Coin/0014.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Coin/0017.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Coin/0023.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Coin/0021.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Coin/0027.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Coin/0020.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Coin/0022.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Coin/0025.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Coin/0030.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Coin/0029.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Coin/0002.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Coin/0003.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Coin/0005.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Coin/0006.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Coin/0004.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Coin/0013.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/Coin/0018.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Coin/0028.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Coin/0001.png" type="Texture" id=35]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=2]
frames = 30
fps = 30.0
frame_0/texture = ExtResource( 35 )
frame_1/texture = ExtResource( 27 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 28 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 31 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 29 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 30 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 11 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 3 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 9 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 16 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 15 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 10 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 32 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 17 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 8 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 14 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 18 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 33 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 12 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 22 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 20 )
frame_20/delay_sec = 0.0
frame_21/texture = ExtResource( 23 )
frame_21/delay_sec = 0.0
frame_22/texture = ExtResource( 19 )
frame_22/delay_sec = 0.0
frame_23/texture = ExtResource( 4 )
frame_23/delay_sec = 0.0
frame_24/texture = ExtResource( 24 )
frame_24/delay_sec = 0.0
frame_25/texture = ExtResource( 13 )
frame_25/delay_sec = 0.0
frame_26/texture = ExtResource( 21 )
frame_26/delay_sec = 0.0
frame_27/texture = ExtResource( 34 )
frame_27/delay_sec = 0.0
frame_28/texture = ExtResource( 26 )
frame_28/delay_sec = 0.0
frame_29/texture = ExtResource( 25 )
frame_29/delay_sec = 0.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="Farm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlotDisplay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="PlotDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plots" type="GridContainer" parent="PlotDisplay/Center"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2

[node name="ShopDisplay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" parent="ShopDisplay" groups=[
"shop",
] instance=ExtResource( 1 )]

[node name="ShopButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -64.0
margin_right = 205.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 1 )
text = "SHOW SHOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceDisplay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconDisplay" type="HBoxContainer" parent="ResourceDisplay"]
margin_left = 24.0
margin_top = 24.0
margin_right = 326.0
margin_bottom = 88.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinDisplay" type="HBoxContainer" parent="ResourceDisplay/IconDisplay"]
margin_right = 94.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="ResourceDisplay/IconDisplay/CoinDisplay"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinAmount" type="Label" parent="ResourceDisplay/IconDisplay/CoinDisplay"]
margin_left = 74.0
margin_top = 14.0
margin_right = 94.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotDisplay" type="HBoxContainer" parent="ResourceDisplay/IconDisplay"]
margin_left = 104.0
margin_right = 198.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotIcon" type="TextureRect" parent="ResourceDisplay/IconDisplay/CarrotDisplay"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotAmount" type="Label" parent="ResourceDisplay/IconDisplay/CarrotDisplay"]
margin_left = 74.0
margin_top = 14.0
margin_right = 94.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotatoDisplay" type="HBoxContainer" parent="ResourceDisplay/IconDisplay"]
margin_left = 208.0
margin_right = 302.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotatoIcon" type="TextureRect" parent="ResourceDisplay/IconDisplay/PotatoDisplay"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotatoAmount" type="Label" parent="ResourceDisplay/IconDisplay/PotatoDisplay"]
margin_left = 74.0
margin_top = 14.0
margin_right = 94.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="buy_crop" from="ShopDisplay/Shop" to="." method="_on_Shop_buy_crop"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
